# newsround

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
src/email/: generate.rs  mod.rs  send.rs  template.html
src/openai/: api_response.rs  authenticate.rs  mod.rs  summariser.rs
src/parser/: bandcamp.rs  fetch.rs  ft.rs  misc.rs  mod.rs
src/stories/: bandcamp.rs  fetch.rs  ft.rs  generate.rs  hackernews.rs  mod.rs  novara.rs  story.rs
